<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#eeeeee"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/headline"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/et_main_weight"
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    android:background="@drawable/square_edittext"
                    android:padding="10dp"
                    android:inputType="numberDecimal"
                    android:hint="Weight"
                    android:layout_height="match_parent" />

                <Spinner
                    android:id="@+id/spinner_weight_unit"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_main_height"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.7"
                    android:background="@drawable/square_edittext"
                    android:padding="10dp"
                    android:inputType="numberDecimal"
                    android:hint="Height" />

                <TextView
                    android:layout_marginLeft="4dp"
                    android:text="cm"
                    android:gravity="bottom"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:id="@+id/tv_height_unit"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:paddingRight="16dp">

                </TextView>

            </LinearLayout>

            <Button
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:id="@+id/bt_main_calculate"
                android:textColor="@android:color/white"
                android:text="calculate"
                android:background="@drawable/rounded_button"
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_main_result"
                android:textSize="24sp"
                android:visibility="gone"
                android:background="@drawable/rounded_edittext"
                android:padding="8dp"
                android:textAlignment="center"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:background="#726E6E"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/rel_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/magnitude_rect" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:text="Underweight"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="0.0 - 18.5"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rel_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/magnitude_rect2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:text="Healthy"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/_18_6_24_9"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rel_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/magnitude_rect3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:text="@string/overweight"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/_25_0_29_9"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black"
                        android:layout_alignParentEnd="true" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rel_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/magnitude_rect4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:text="@string/obese"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/_30_0_above"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/black"
                        android:layout_alignParentEnd="true" />


                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>